# imgctl

./: .gitignore  Cargo.toml  README.md  cortex.toml
.github/workflows/: ci.yml  release.yml
apps/imgctl-cli/: Cargo.toml
apps/imgctl-cli/src/: cli.rs  main.rs
apps/imgctl-cli/tests/: cli_smoke.rs
crates/imgctl-core/: Cargo.toml
crates/imgctl-core/src/: color.rs  error.rs  geom.rs  io_source.rs  lib.rs  response.rs
crates/imgctl-core/src/output/: json.rs  mod.rs  tsv.rs
crates/imgctl-image/: Cargo.toml
crates/imgctl-image/src/: annotate.rs  arrow.rs  blur.rs  concat.rs  convert.rs  crop.rs  decode.rs  encode.rs  format.rs  lib.rs  rect.rs  resize.rs  text.rs
crates/imgctl-image/src/drawing/: alpha.rs  arrow.rs  mod.rs  text.rs
crates/imgctl-mermaid/: Cargo.toml
crates/imgctl-mermaid/src/: cli.rs  lib.rs  render.rs  svg_to_png.rs
crates/imgctl-vision/: Cargo.toml
crates/imgctl-vision/src/: diff.rs  fix.rs  hash.rs  info.rs  lib.rs  map_coords.rs  slice.rs
