[package]
name = "imgctl-image"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
imgctl-core.workspace = true
image.workspace = true
imageproc.workspace = true
ab_glyph.workspace = true
fontdb.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
